--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
+    "jquery": "^3.7.1",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "yup": "^1.4.0"
